--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d8b98a3
+	base = 0d67d25
 	trimbase = 
 	parent = debian/melodic/realsense_gazebo_plugin
-	previous = 
+	previous = d8b98a3
