--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ef27471
+	base = 89d865f
 	trimbase = 
 	parent = release/melodic/realsense_gazebo_plugin
-	previous = 
+	previous = ef27471
